<resources>
    <string name="app_name">SOS Demo App</string>
    <string name="action_settings">Settings</string>
    <string name="button_launch_SOS">Launch SOS</string>
    <string name="deploymentfield">Deployment Id</string>
    <string name="organizationfield">Org Id</string>
    <string name="endpointfield">API Endpoint</string>
    <string name="emailfield">Email (Optional)</string>
    <string name="validationerror">All fields are required</string>
    <string name="exceptionerror">Oh no, something went wrong...</string>
</resources>
