<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jgarciaponce.mysosapp.MyActivity"
    tools:showIn="@layout/activity_my"
    android:background="@drawable/galaxyngc4845">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="25dp"
        android:textColorHint="#424b9d"
        android:textColor="#fdfdff"
        android:id="@+id/textView" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_launch_SOS"
        android:onClick="handleSOSButton"
        android:layout_marginTop="134dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:ellipsize="middle"
        android:id="@+id/button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:singleLine="true"
        android:textSize="20dp"
        android:hint="@string/emailfield"
        android:textColorHighlight="#ffff"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:clickable="false" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/deploymentid"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:singleLine="true"
        android:textSize="20dp"
        android:hint="@string/deploymentfield"
        android:textColorHint="#ffffff"
        android:textColorHighlight="#fefefe"
        android:textColor="#ffffff"
        android:clickable="false" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/orgid"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:singleLine="true"
        android:textSize="20dp"
        android:hint="@string/organizationfield"
        android:textColorHint="#ffffff"
        android:textColorHighlight="#fefefe"
        android:textColor="#ffffff"
        android:clickable="false" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/endpoint"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:singleLine="true"
        android:hint="@string/endpointfield"
        android:textSize="20dp"
        android:textColorHint="#ffffff"
        android:textColorHighlight="#fefefe"
        android:textColor="#ffffff"
        android:clickable="false" />

</RelativeLayout>
